--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "unidb": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Abhinandan Darbey",
   "license": "MIT",
